--- a/book/目录.md
+++ b/book/目录.md
@@ -1,3 +1,6 @@
+整个项目的源码托管在github，[Lift学习之路](https://github.com/yangbajing/Lift-learning-the-Road)。
+第一次系统的写，欢迎来信指教 `yangbajing at gmail com` 。
+
 - [000. 序](http://my.oschina.net/yangbajing/blog/82413)
 
 # 基础
