--- a/book/目录.md
+++ b/book/目录.md
@@ -1,5 +1,9 @@
 整个项目的源码托管在github，[Lift学习之路](https://github.com/yangbajing/Lift-learning-the-Road)。
-第一次系统的写，欢迎来信指教 `yangbajing at gmail com` 。
+第一次系统的写，欢迎来信指教。
+
+- 作者：杨景
+- 网名：羊八井
+- 邮箱：yangbajing at gmail com
 
 - [000. 序](http://my.oschina.net/yangbajing/blog/82413)
 
