添加 附录A. 使用Sbt

--- a/book/002.搭建Lift项目.md
+++ b/book/002.搭建Lift项目.md
@@ -3,50 +3,9 @@
 
 sbt -> sbt + jetty -> sbt + jetty + lift
 
-# 安装sbt
+# 安装Sbt
 
-**在本节，你将学会怎样从网络下载sbt并建立你的第一个sbt项目**
-
-下载 [sbt-launch.jar][sbt-launch.jar] 并放到 ~/bin 目录中，创建sbt12启动文件。
-在sbt文件内添加如下内容：
-
-    java -Xms512M -Xmx1024M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=384M -Dfile.encoding=UTF-8 -jar `dirname $0`/sbt-launch.jar "$@"
-
-为新添加的脚本添加可执行权限：
-
-    $ chmod +x ~/bin/sbt12
-    
-现在，sbt就已经装好了。接下来我们开始建立第一个sbt项目（完整的项目代码在book/examples/sbt-project）。
-首先来看看整个项目组织结构：
-
-    ├── project
-    │   └── Build.scala
-    └── src
-        └── main
-            └── scala
-                └── learn
-                    └── HelloWorld.scala
-    
-    5 directories, 2 files
-
-如上目录，在 `project/Build.scala` 中进行项目属性配置。如：`scala` 版本，依赖库，文件结构等。而 `src` 目
-录刚是标准的MAVEN式目录结构，在此就不铸更多说明。让我们来简单分析下 `project/Build.scala` 的内容：
-
-      lazy val root = Project(
-        id = "sbt-project",
-        base = file("."),
-        settings = Project.defaultSettings ++ basicSettings)
-
-sbt的更深入讲解请参考 [使用SBT构建Scala应用](https://github.com/fujohnwang/real_world_scala/blob/master/02_sbt.markdown)
-
-运行 `HelloWorld` 是在sbt console中，使用如下命令：
-
-    $ sbt
-    > run
-    [info] Running learn.HelloWorld 
-    您好，羊八井！
-    [success] Total time: 0 s, completed 2013-2-2 20:55:18
-
+详细内容请读[附录A. 使用Sbt](http://my.oschina.net/yangbajing/blog/107745)
 
 
 # 导入Lift支持
