--- a/book/目录.md
+++ b/book/目录.md
@@ -33,22 +33,28 @@
 - [. URI重写]
 - [. 构建REST API]
 - [. 访问数据库，使用Salat + Casbah操作MongoDB]
+- [. 实战3：基于HTML5的视频网站]
+- [. 实战4：图片分享网站]
+- [. 实战5：商品进销存管理系统]
 - ......
 
 # 高级
 
 - [. 使用Lift Comet开始交互式实时应用]
 - [. 构建动态的菜单结构]
+- [. 实战6：轻博客]
 - [. Lift HTTP请求]
 - [. Lift的生命周期]
+- [. 实战7：企业OA系统]
 - ......
 
 # 附录
 
-- [A. 使用Emacs]
-- [B. 使用Eclipse]
-- [C. 使用IntelliJ Idea]
-- [D. Box的运用]
-- [E. PostgreSQL使用简介]
-- [F. MongoDB使用简介]
+- [A. 使用Sbt](http://my.oschina.net/yangbajing/blog/107745)
+- [B. 使用Emacs]
+- [C. 使用Eclipse]
+- [D. 使用IntelliJ Idea]
+- [E. Box的运用]
+- [F. PostgreSQL使用简介]
+- [G. MongoDB使用简介]
 
