--- a/book/002.搭建Lift项目.md
+++ b/book/002.搭建Lift项目.md
@@ -1,14 +1,36 @@
-搭建Lift项目
-==============
+002. 搭建Lift项目
+=================
 
 sbt -> sbt + jetty -> sbt + jetty + lift
 
-# 安装Sbt
+## 安装sbt
 
-详细内容请读[附录A. 使用Sbt](http://my.oschina.net/yangbajing/blog/107745)
+详细内容请读[附录A. 使用sbt](http://my.oschina.net/yangbajing/blog/107745)
+
+    ├── project
+    └── src
+        ├── main
+        │   ├── resources
+        │   │   └── props
+        │   ├── scala
+        │   │   ├── bootstrap
+        │   │   │   └── liftweb
+        │   │   └── code
+        │   │       ├── lib
+        │   │       └── snippet
+        │   └── webapp
+        │       ├── images
+        │       ├── static
+        │       ├── templates-hidden
+        │       └── WEB-INF
+        └── test
+            ├── resources
+            └── scala
+                └── code
+                    └── snippet
 
 
-# 导入Lift支持
+## 添加Lift支持
 
 **在本节，你将学会添加Jetty以使sbt项目支持Web开发。还将学会在在scala里写Servlet并添加Lift支持**
 
@@ -17,7 +39,7 @@ sbt -> sbt + jetty -> sbt + jetty + lift
 （懒了，具体过程先略略吧。屌丝们看看代码……）
 
 
-# 简单的说说Lift
+## 简单的说说Lift
 
 **从官方的lift_blank开始谈谈Lift framework**
 
