--- a/book/目录.md
+++ b/book/目录.md
@@ -5,56 +5,62 @@
 - 网名：羊八井
 - 邮箱：yangbajing at gmail com
 
+# 目录
+
 - [000. 序](http://my.oschina.net/yangbajing/blog/82413)
 
-# 基础
+## 基础
 
 - [001. Lift简介](http://my.oschina.net/yangbajing/blog/82422)
 - [002. 搭建Lift项目](http://my.oschina.net/yangbajing/blog/107693)
-- [003. 深入Snippet, Template (1. 基础知识)]
-- [004. 深入Snippet, Template (2. 设计工程师友好的模板)]
+- [003. Lift基础]
+- [004. Snippet和Template基础]
 - [005. CssSel]
-- [006. Lift中的表单处理]
-- [007. 谈谈RequestVar与SessionVar]
-- [008. 深入Snippet, Template (3. Snippet和Template的高级应用)]
-- [009. Sitemap (1. 构建站点菜单)]
-- [010. Sitemap (2. 访问控制)]
-- [011. 访问数据库，使用JDBC操作PostgreSQL]
-- [012. 实战1：一个微型用户管理系统]
-- [013. 使用Ajax (1. 基础)]
-- [014. 使用Ajax (2. 深入)]
-- [015. 实战2：使用Ajax改写微型用户管理系统]
+- [006. 谈谈S与SHtml对象]
+- [007. Lift中的表单处理]
+- [. 深入Snippet和Template]
+- [. 谈谈RequestVar与SessionVar]
+- [. 深入Snippet, Template (3. Snippet和Template的高级应用)]
+- [. Sitemap (1. 构建站点菜单)]
+- [. Sitemap (2. 访问控制)]
+- [. 访问数据库，使用JDBC操作PostgreSQL]
+- [. 实战1：一个微型用户管理系统]
+- [. 使用Ajax (1. 基础)]
+- [. 使用Ajax (2. 深入)]
+- [. 实战2：使用Ajax改写微型用户管理系统]
 - ......
 
-# 中级
+## 中级
 
 - [. 整合Twitter Bootstrap]
 - [. 访问数据库，使用Squeryl操作关系数据库]
 - [. URI重写]
 - [. 构建REST API]
+- [. 再说Snippet和Template，有关页面分发与自定义模板解析]
+- [. 再说S对象]
+- [. 再说SHtml对象]
 - [. 访问数据库，使用Salat + Casbah操作MongoDB]
 - [. 实战3：基于HTML5的视频网站]
 - [. 实战4：图片分享网站]
 - [. 实战5：商品进销存管理系统]
 - ......
 
-# 高级
+## 高级
 
 - [. 使用Lift Comet开始交互式实时应用]
 - [. 构建动态的菜单结构]
 - [. 实战6：轻博客]
-- [. Lift HTTP请求]
+- [. Ajax的高级应用，扩展Ajax功能]
 - [. Lift的生命周期]
+- [. Lift HTTP请求详解]
 - [. 实战7：企业OA系统]
 - ......
 
-# 附录
+## 附录
 
-- [A. 使用Sbt](http://my.oschina.net/yangbajing/blog/107745)
-- [B. 使用Emacs]
-- [C. 使用Eclipse]
-- [D. 使用IntelliJ Idea]
-- [E. Box的运用]
-- [F. PostgreSQL使用简介]
-- [G. MongoDB使用简介]
+- [A. 使用sbt](http://my.oschina.net/yangbajing/blog/107745)
+- [B. 在开发工具中使用Scala，Emacs, Idea, Eclipse]
+- [C. Box的运用]
+- [D. PostgreSQL使用简介]
+- [E. MongoDB使用简介]
 
