--- a/book/002.搭建Lift项目.md
+++ b/book/002.搭建Lift项目.md
@@ -57,11 +57,13 @@ Lift程序不需要一大堆的xml或XXX文件来进行配置，它只要在web.
       <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-当然，也不是说Lift就不能定置了。它也是可以定制的，而且定制选项非常的丰富。Lift所有的环境定制都可以放到 `bootstrap.liftweb.Boot` 类中进行。我们在 `Boot.boot()` 方法中配置我们的Lift应用环境。（注：关于配置内容，请看代码）
+当然，也不是说Lift就不能定置了。它也是可以定制的，而且定制选项非常的丰富。Lift所有的环境定制都可以放到 `bootstrap.liftweb.Boot` 类中进行。
+我们在 `Boot.boot()` 方法中配置我们的Lift应用环境。（注：关于配置内容，请看代码）
 
-对于任何Web程序来说，我们都需要从浏览器（或其它的什么东西）访问它。这里，就涉及到一个页面路径分发的问题！
-Lift是View First（视图优先）的框架，它不同于一般的MVC模型。Lift没有控制器，用户访问的URI是什么，它就返回什么！比如说
-用户访问： `http://localhost:8081/first/index` 这个路径，Lift就会访问磁盘上实际的 /first/index.html（或者.htm）文件。不像Servlet，你需要配置一个<servlet-mapping>去进行地址映射。这就是View First，一句话：你访问的URI就是视图，不是控制器！
+对于任何Web程序来说，我们都需要从浏览器（或其它的什么东西）访问它。这里，就涉及到一个页面路径分发的问题！Lift是View First（视图优先）的框架，
+它不同于一般的MVC模型。Lift没有控制器，用户访问的URI是什么，它就返回什么！比如说用户访问： `http://localhost:8081/first/index` 这个路径，
+Lift就会访问磁盘上实际的 /first/index.html（或者.htm）文件。不像Servlet，你需要配置一个<servlet-mapping>去进行地址映射。
+这就是View First，一句话：你访问的URI就是视图，不是控制器！
 
 （注：Lift也支持URI Rewrite和Rest API机制，而且实现是那么的简洁，一致和强大！后面的部分会讲到。）
 
@@ -72,7 +74,7 @@ Lift是View First（视图优先）的框架，它不同于一般的MVC模型。
     [info] NO JSP Support for /, did not find org.apache.jasper.servlet.JspServlet
     Null identity service, trying login service: null
     Finding identity service: null
-    [info] started o.e.j.w.WebAppContext{/,[file:/data/workspace/Lift-learning-the-Road/book/    examples/lift-project/src/main/webapp/]}
+    [info] started o.e.j.w.WebAppContext{/,[file:/data/workspace/Lift-learning-the-Road/book/examples/lift-project/src/main/webapp/]}
     [info] started o.e.j.w.WebAppContext{/,[file:/data/workspace/Lift-learning-the-Road/book/examples/lift-project/src/main/webapp/]}
     SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder".
     SLF4J: Defaulting to no-operation (NOP) logger implementation
@@ -87,12 +89,14 @@ Lift是View First（视图优先）的框架，它不同于一般的MVC模型。
 1. 访问 `http://localhost:8081/index`
 2. Lift解析index.html
 3. 找到 `class="lift:helloWorld.howdy` ，根据 `helloWorld.howdy` 找到相应类的相应方法就是：
- `code.snippet.HelloWorld.howdy` 
-4. 找到 `data-lift="HelloWorld"，根据 `HelloWorld` 找到相应类的相应方法就是：
- `code.snippet.HelloWorld.render`
-5. Lift从 `class="lift:surround?with=default;at=content"` 打开 `templates-hidden/default.html` 模板。 `with=default` 指定把寻找哪个模板， `at=content` 设置将当前内容插入到模板的 `id=content` 片段中。
+   `code.snippet.HelloWorld.howdy`
+4. 找到 `data-lift="HelloWorld"` ，根据 `HelloWorld` 找到相应类的相应方法就是：
+   `code.snippet.HelloWorld.render`
+5. Lift从 `class="lift:surround?with=default;at=content"` 打开 `templates-hidden/default.html` 模板。 `with=default` 指定
+  把寻找哪个模板， `at=content` 设置将当前内容插入到模板的 `id=content` 片段中。
 
-下面我们来简单的说说 `Lift` 的 `snippet` 机制。Snippet，就是“片段”。Lift把Web页面分成一个一个的片段，就像传统的 GUI 开发一样一个窗口上面由很多的控件组成。而这个Snippet可以很大，它里面包含了table, input, textarea等html标签；也可以很小，只是输出一句话！
+下面我们来简单的说说 `Lift` 的 `snippet` 机制。Snippet，就是“片段”。Lift把Web页面分成一个一个的片段，就像传统的 GUI 开发一样一个窗口上面由
+很多的控件组成。而这个Snippet可以很大，它里面包含了table, input, textarea等html标签；也可以很小，只是输出一句话！
 
 
 
