--- a/book/003.Lift基础.md
+++ b/book/003.Lift基础.md
@@ -3,8 +3,30 @@
 
 ***本章讲简要Lift项目的目录结构和构建它所需要的一些基础配置***
 
-## Lift目录结构
+## 进入Lift
 
+首先看看一个简单的Lift应用的目录结构：
+
+    .
+    ├── main
+    │   ├── resources
+    │   │   └── props
+    │   ├── scala
+    │   │   ├── bootstrap
+    │   │   │   └── liftweb
+    │   │   └── code
+    │   │       ├── lib
+    │   │       └── snippet
+    │   └── webapp
+    │       ├── images
+    │       ├── templates-hidden
+    │       └── WEB-INF
+
+Lift处理请求的第一步的拦截HTTP，这由一个 `net.liftweb.http.LiftFilter` 来处理。只需要在 `web.xml` 的
+配置下就可以了。
+
+在Lift中，程序是从 `bootstrap.liftweb.Boot.boot()` 开始启动的。而在 `webapp/templates-hidden` 目录下
+放置的是页面模板代码。
 
 ## Boot类
 
