--- a/book/目录.md
+++ b/book/目录.md
@@ -14,19 +14,17 @@
 - [001. Lift简介](http://my.oschina.net/yangbajing/blog/82422)
 - [002. 搭建Lift项目](http://my.oschina.net/yangbajing/blog/107693)
 - [003. Lift基础]
-- [004. Snippet和Template基础]
-- [005. CssSel]
-- [006. 谈谈S与SHtml对象]
-- [007. Lift中的表单处理]
-- [. 深入Snippet和Template]
-- [. 谈谈RequestVar与SessionVar]
-- [. 深入Snippet, Template (3. Snippet和Template的高级应用)]
+- [004. Template]
+- [005. Snippet]
+- [006. CssSel]
+- [. S和SHtml对象]
+- [. RequestVar与SessionVar]
+- [. Lift中的表单处理]
 - [. Sitemap (1. 构建站点菜单)]
 - [. Sitemap (2. 访问控制)]
 - [. 访问数据库，使用JDBC操作PostgreSQL]
 - [. 实战1：一个微型用户管理系统]
-- [. 使用Ajax (1. 基础)]
-- [. 使用Ajax (2. 深入)]
+- [. Lift中的Ajax (1. 基础)]
 - [. 实战2：使用Ajax改写微型用户管理系统]
 - ......
 
@@ -37,11 +35,12 @@
 - [. URI重写]
 - [. 构建REST API]
 - [. 再说Snippet和Template，有关页面分发与自定义模板解析]
-- [. 再说S对象]
-- [. 再说SHtml对象]
-- [. 访问数据库，使用Salat + Casbah操作MongoDB]
 - [. 实战3：基于HTML5的视频网站]
+- [. 访问数据库，使用Salat + Casbah操作MongoDB]
+- [. Lift中的Ajax (2. 深入)]
+- [. 应用程序测试]
 - [. 实战4：图片分享网站]
+- [. 应用程序部署]
 - [. 实战5：商品进销存管理系统]
 - ......
 
