--- a/book/目录.md
+++ b/book/目录.md
@@ -13,7 +13,7 @@
 
 - [001. Lift简介](http://my.oschina.net/yangbajing/blog/82422)
 - [002. 搭建Lift项目](http://my.oschina.net/yangbajing/blog/107693)
-- [003. Lift基础]
+- [003. Lift基础](http://my.oschina.net/yangbajing/blog/108340)
 - [004. Template]
 - [005. Snippet]
 - [006. CssSel]
